With new layout, part of query results pivot table was getting scrolled out of viewport.  Fixed the view so that entire pivot table is visible with horizontal & vertical scroll bars within the viewport.

--- a/www/app/styles/pivot-table.css
+++ b/www/app/styles/pivot-table.css
@@ -1,3 +1,7 @@
+.os-pivot-table {
+  height: 100%;
+}
+
 .os-pivot-table table {
   border: 1px solid #ddd;
   width: 0!important;
